--- a/01-intro/duration-prediction.ipynb
+++ b/01-intro/duration-prediction.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "8e013caf",
    "metadata": {},
    "outputs": [],
@@ -79,9 +79,7 @@
     "df = df[(df.duration >= 1) & (df.duration <= 60)]\n",
     "\n",
     "categorical = ['PULocationID', 'DOLocationID']\n",
-    "numerical = ['trip_distance']\n",
-    "\n",
-    "df[categorical] = df[categorical].astype(str)"
+    "numerical = ['trip_distance']"
    ]
   },
   {
