Log models with mlflow.framework.log_model or mlflow.log_artifact

--- a/02-experiment-tracking/duration-prediction.ipynb
+++ b/02-experiment-tracking/duration-prediction.ipynb
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "id": "a4999b94",
    "metadata": {},
    "outputs": [],
@@ -283,7 +283,10 @@
     "    rmse = root_mean_squared_error(y_val, y_pred)\n",
     "    mlflow.log_metric(\"rmse\", rmse)\n",
     "\n",
-    "    # mlflow.log_artifact(local_path=\"models/lin_reg.bin\", artifact_path=\"models_pickle\")"
+    "    with open(\"models/lin_reg.bin\", \"wb\") as f_out:\n",
+    "        pickle.dump((dv, lr), f_out )\n",
+    "\n",
+    "    mlflow.log_artifact(local_path=\"models/lin_reg.bin\", artifact_path=\"models_pickle\")"
    ]
   },
   {
@@ -815,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "0e8cd729",
    "metadata": {},
    "outputs": [
@@ -1447,10 +1450,82 @@
     "\n",
     "    with open(\"models/preprocessor.b\", \"wb\") as f_out:\n",
     "        pickle.dump(dv, f_out)\n",
-    "    mlflow.log_artifact(\"models/preprocessor.b\", artifact_path=\"preprocessor\")\n",
+    "    mlflow.log_artifact(\"models/preprocessor.b\", artifact_path=\"preprocessor\") #log model as an artifact\n",
     "\n",
     "    mlflow.xgboost.log_model(booster, artifact_path=\"models_mlflow\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e196189",
+   "metadata": {},
+   "source": [
+    "### Cargar modelo desde el servidor de MLflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "ef1e6416",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logged_model = 'runs:/e5e7630a78574183aa8a1912f435831f/models_mlflow'\n",
+    "\n",
+    "# Load model as a PyFuncModel.\n",
+    "loaded_model = mlflow.pyfunc.load_model(logged_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "22c9df11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xgboost_model = mlflow.xgboost.load_model(logged_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "fc4fda56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_new_pred = xgboost_model.predict(valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7ea1d8c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([14.32328  ,  7.0412974, 14.8250065, 24.55789  ,  9.583236 ,\n",
+       "       17.173246 , 10.693504 ,  7.5651336,  9.937359 , 16.042425 ],\n",
+       "      dtype=float32)"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_new_pred[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6df04742",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1462,7 +1537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "87614b82",
    "metadata": {},
    "outputs": [
@@ -1493,7 +1568,7 @@
     "        mlmodel.fit(X_train, y_train)\n",
     "\n",
     "        y_pred = mlmodel.predict(X_val)\n",
-    "        rmse = mean_squared_error(y_val, y_pred, squared=False)\n",
+    "        rmse = root_mean_squared_error(y_val, y_pred)\n",
     "        mlflow.log_metric(\"rmse\", rmse)\n",
     "        "
    ]
