Registro de Modelos

--- a/02-experiment-tracking/model-registry.ipynb
+++ b/02-experiment-tracking/model-registry.ipynb
@@ -9,7 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import mlflow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +43,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Experiment: artifact_location='./mlruns/0', experiment_id='0', lifecycle_stage='active', name='Default', tags={}>,\n",
-       " <Experiment: artifact_location='./mlruns/1', experiment_id='1', lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>,\n",
-       " <Experiment: artifact_location='./mlruns/3', experiment_id='3', lifecycle_stage='active', name='my-cool-experiment', tags={}>]"
+       "<Experiment: artifact_location=('file:///d:/Universidad/Cursos/MLOps en '\n",
+       " 'Zoomcamp/02-experiment-tracking/mlruns/1'), creation_time=1748017795294, experiment_id='1', last_update_time=1748017795294, lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,26 +61,53 @@
    "source": [
     "client = MlflowClient(tracking_uri=MLFLOW_TRACKING_URI)\n",
     "\n",
-    "client.list_experiments()"
+    "client.get_experiment_by_name(\"nyc-taxi-experiment\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'3'"
+       "[<Experiment: artifact_location=('file:///d:/Universidad/Cursos/MLOps en '\n",
+       "  'Zoomcamp/02-experiment-tracking/mlruns/2'), creation_time=1748040190626, experiment_id='2', last_update_time=1748040190626, lifecycle_stage='active', name='my-cool-experiment', tags={}>,\n",
+       " <Experiment: artifact_location=('file:///d:/Universidad/Cursos/MLOps en '\n",
+       "  'Zoomcamp/02-experiment-tracking/mlruns/1'), creation_time=1748017795294, experiment_id='1', last_update_time=1748017795294, lifecycle_stage='active', name='nyc-taxi-experiment', tags={}>,\n",
+       " <Experiment: artifact_location=('file:///d:/Universidad/Cursos/MLOps en '\n",
+       "  'Zoomcamp/02-experiment-tracking/mlruns/0'), creation_time=1748017795150, experiment_id='0', last_update_time=1748017795150, lifecycle_stage='active', name='Default', tags={}>]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Muestra los experimentos en el servidor por id\n",
+    "client.search_experiments()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Crear un nuevo experimento\n",
     "client.create_experiment(name=\"my-cool-experiment\")"
    ]
   },
@@ -85,15 +120,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Aqui se busca los runs de un experimento por id filtrando por rmse menor a 7\n",
     "from mlflow.entities import ViewType\n",
     "\n",
     "runs = client.search_runs(\n",
     "    experiment_ids='1',\n",
-    "    filter_string=\"metrics.rmse < 7\",\n",
+    "    filter_string=\"metrics.rmse < 6.4\",\n",
     "    run_view_type=ViewType.ACTIVE_ONLY,\n",
     "    max_results=5,\n",
     "    order_by=[\"metrics.rmse ASC\"]\n",
@@ -102,31 +138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "run id: 7db08e4f93af4ee1bcbce1d8a763e23a, rmse: 6.3040\n",
-      "run id: a06a6b594fff409cb0d34e203b49f33f, rmse: 6.7423\n",
-      "run id: b8904012c84343b5bf8ee72aa8f0f402, rmse: 6.9047\n",
-      "run id: 54493fed643c4952be5232279e309053, rmse: 6.9213\n"
+      "run id: e5e7630a78574183aa8a1912f435831f, rmse: 6.3064\n",
+      "run id: cdabe3a537e94d28a795ed338d3764a9, rmse: 6.3184\n",
+      "run id: 8050386818d14521bb3a9461b8c690f0, rmse: 6.3897\n"
      ]
     }
    ],
    "source": [
+    "# Se listan los runs encontrados\n",
     "for run in runs:\n",
     "    print(f\"run id: {run.info.run_id}, rmse: {run.data.metrics['rmse']:.4f}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -154,68 +183,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Registered model 'nyc-taxi-regressor' already exists. Creating a new version of this model...\n",
-      "2022/05/19 16:47:17 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: nyc-taxi-regressor, version 4\n",
-      "Created version '4' of model 'nyc-taxi-regressor'.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<ModelVersion: creation_timestamp=1652971637398, current_stage='None', description=None, last_updated_timestamp=1652971637398, name='nyc-taxi-regressor', run_id='b8904012c84343b5bf8ee72aa8f0f402', run_link=None, source='./mlruns/1/b8904012c84343b5bf8ee72aa8f0f402/artifacts/model', status='READY', status_message=None, tags={}, user_id=None, version=4>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "run_id = \"b8904012c84343b5bf8ee72aa8f0f402\"\n",
-    "model_uri = f\"runs:/{run_id}/model\"\n",
-    "mlflow.register_model(model_uri=model_uri, name=\"nyc-taxi-regressor\")"
+    "# Para registrar un nuevo run en codigo\n",
+    "#run_id = \"b4b6d5e2bfe546c9830efdfaae087b14\"\n",
+    "#model_uri = f\"runs:/{run_id}/model\"\n",
+    "#mlflow.register_model(model_uri=model_uri, name=\"nyc-taxi-regressor\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model_name = \"nyc-taxi-regressor\"\n",
+    "# Asignar alias \"staging\" a la versión 1\n",
+    "client.set_registered_model_alias(model_name, \"staging\", 1)\n",
+    "\n",
+    "# Asignar alias \"production\" a la versión 2\n",
+    "client.set_registered_model_alias(model_name, \"production\", 2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "version: 1, stage: Staging\n",
-      "version: 2, stage: Production\n",
-      "version: 4, stage: None\n"
+      "<ModelVersion: aliases=['production'], creation_timestamp=1748038343719, current_stage='None', description='', last_updated_timestamp=1748038343719, name='nyc-taxi-regressor', run_id='e5e7630a78574183aa8a1912f435831f', run_link='', source=('file:///d:/Universidad/Cursos/MLOps en '\n",
+      " 'Zoomcamp/02-experiment-tracking/mlruns/1/e5e7630a78574183aa8a1912f435831f/artifacts/models_mlflow'), status='READY', status_message=None, tags={'model': 'gbr(example)'}, user_id=None, version=2>\n"
      ]
     }
    ],
    "source": [
-    "model_name = \"nyc-taxi-regressor\"\n",
-    "latest_versions = client.get_latest_versions(name=model_name)\n",
-    "\n",
-    "for version in latest_versions:\n",
-    "    print(f\"version: {version.version}, stage: {version.current_stage}\")"
+    "aliases = client.get_model_version_by_alias(model_name, \"production\")\n",
+    "print(aliases)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.set_model_version_tag(model_name, 1, \"stage\", \"production\")\n",
+    "client.set_model_version_tag(model_name, 2, \"stage\", \"production\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "version: 2, stage: None\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Daniel Muñoz Viveros\\AppData\\Local\\Temp\\ipykernel_6016\\431351333.py:3: FutureWarning: ``mlflow.tracking.client.MlflowClient.get_latest_versions`` is deprecated since 2.9.0. Model registry stages will be removed in a future major release. To learn more about the deprecation of model registry stages, see our migration guide here: https://mlflow.org/docs/latest/model-registry.html#migrating-from-stages\n",
+      "  latest_versions = client.get_latest_versions(name=model_name)\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Muestra la ultima version de un modelo en un stage DEPRECATED\n",
+    "# model_name = \"nyc-taxi-regressor\"\n",
+    "# latest_versions = client.get_latest_versions(name=model_name)\n",
+    "\n",
+    "# for version in latest_versions:\n",
+    "#     print(f\"version: {version.version}, stage: {version.current_stage}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -230,28 +283,40 @@
     }
    ],
    "source": [
-    "model_version = 4\n",
-    "new_stage = \"Staging\"\n",
-    "client.transition_model_version_stage(\n",
-    "    name=model_name,\n",
-    "    version=model_version,\n",
-    "    stage=new_stage,\n",
-    "    archive_existing_versions=False\n",
-    ")"
+    "## Cambiar el stage de un modelo DEPRECATED\n",
+    "# model_version = 4\n",
+    "# new_stage = \"Staging\"\n",
+    "# client.transition_model_version_stage(\n",
+    "#     name=model_name,\n",
+    "#     version=model_version,\n",
+    "#     stage=new_stage,\n",
+    "#     archive_existing_versions=False\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_version = 2\n",
+    "new_stage = \"Production\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ModelVersion: creation_timestamp=1652971637398, current_stage='Staging', description='The model version 4 was transitioned to Staging on 2022-05-19', last_updated_timestamp=1652972142779, name='nyc-taxi-regressor', run_id='b8904012c84343b5bf8ee72aa8f0f402', run_link=None, source='./mlruns/1/b8904012c84343b5bf8ee72aa8f0f402/artifacts/model', status='READY', status_message=None, tags={}, user_id=None, version=4>"
+       "<ModelVersion: aliases=['production'], creation_timestamp=1748038343719, current_stage='None', description='The model version 2 was transitioned to Production on 2025-05-23', last_updated_timestamp=1748046029519, name='nyc-taxi-regressor', run_id='e5e7630a78574183aa8a1912f435831f', run_link='', source=('file:///d:/Universidad/Cursos/MLOps en '\n",
+       " 'Zoomcamp/02-experiment-tracking/mlruns/1/e5e7630a78574183aa8a1912f435831f/artifacts/models_mlflow'), status='READY', status_message=None, tags={'model': 'gbr(example)', 'stage': 'production'}, user_id=None, version=2>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,6 +325,8 @@
     "from datetime import datetime\n",
     "\n",
     "date = datetime.today().date()\n",
+    "\n",
+    "## Cambiar la descripcion de un modelo relacionado a un stage\n",
     "client.update_model_version(\n",
     "    name=model_name,\n",
     "    version=model_version,\n",
@@ -296,19 +363,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
     "import pandas as pd\n",
     "\n",
-    "\n",
     "def read_dataframe(filename):\n",
-    "    df = pd.read_csv(filename)\n",
-    "\n",
-    "    df.lpep_dropoff_datetime = pd.to_datetime(df.lpep_dropoff_datetime)\n",
-    "    df.lpep_pickup_datetime = pd.to_datetime(df.lpep_pickup_datetime)\n",
+    "    df = pd.read_parquet(filename)\n",
     "\n",
     "    df['duration'] = df.lpep_dropoff_datetime - df.lpep_pickup_datetime\n",
     "    df.duration = df.duration.apply(lambda td: td.total_seconds() / 60)\n",
@@ -329,10 +392,13 @@
     "    return dv.transform(train_dicts)\n",
     "\n",
     "\n",
-    "def test_model(name, stage, X_test, y_test):\n",
-    "    model = mlflow.pyfunc.load_model(f\"models:/{name}/{stage}\")\n",
+    "def test_model(name, tag_stage, X_test, y_test):\n",
+    "#     model = mlflow.pyfunc.load_model(f\"models:/{name}/{stage}\")\n",
+    "#     y_pred = model.predict(X_test)\n",
+    "#     return {\"rmse\": root_mean_squared_error(y_test, y_pred)}\n",
+    "    model = mlflow.pyfunc.load_model(f\"models:/{name}@{tag_stage}\")\n",
     "    y_pred = model.predict(X_test)\n",
-    "    return {\"rmse\": mean_squared_error(y_test, y_pred, squared=False)}"
+    "    return {\"rmse\": root_mean_squared_error(y_test, y_pred)}\n"
    ]
   },
   {
@@ -344,48 +410,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/42/f9s_rgk15078ym2w50_xtc180000gq/T/ipykernel_5486/3050441246.py:6: DtypeWarning: Columns (3) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  df = pd.read_csv(filename)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = read_dataframe(\"data/green_tripdata_2021-03.csv\")"
+    "df = read_dataframe(\"./data/green_tripdata_2021-03.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "run_id = \"e5e7630a78574183aa8a1912f435831f\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "73262ccaa12244a18ba0f1f775352095",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "'/Users/cristian.martinez/Repositories/mlops-zoomcamp/02-experiment-tracking/preprocessor'"
+       "Downloading artifacts:   0%|          | 0/1 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 37,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'d:\\\\Universidad\\\\Cursos\\\\MLOps en Zoomcamp\\\\02-experiment-tracking\\\\preprocessor'"
+      ]
+     },
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Esta linea descarga archivo preprocessor.db en el directorio actual en una carpeta llamada preprocessor\n",
     "client.download_artifacts(run_id=run_id, path='preprocessor', dst_path='.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Leemos el archivo preprocessor.b\n",
     "import pickle\n",
     "\n",
     "with open(\"preprocessor/preprocessor.b\", \"rb\") as f_in:\n",
@@ -394,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,70 +495,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 139 ms, sys: 44.6 ms, total: 183 ms\n",
-      "Wall time: 447 ms\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'rmse': 6.659623830022514}"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "%time test_model(name=model_name, stage=\"Production\", X_test=X_test, y_test=y_test)"
+    "model_name = \"nyc-taxi-regressor\"\n",
+    "tag_stage = \"production\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 6.94 s, sys: 216 ms, total: 7.16 s\n",
-      "Wall time: 7.28 s\n"
+     "ename": "TypeError",
+     "evalue": "test_model() got an unexpected keyword argument 'stage'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[1;32m<timed eval>:1\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: test_model() got an unexpected keyword argument 'stage'"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'rmse': 6.881555517147188}"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%time test_model(name=model_name, stage=\"Staging\", X_test=X_test, y_test=y_test)"
+    "# %time test_model(name=model_name, tag_stage=\"production\", X_test=X_test, y_test=y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -491,12 +541,13 @@
     }
    ],
    "source": [
-    "client.transition_model_version_stage(\n",
-    "    name=model_name,\n",
-    "    version=4,\n",
-    "    stage=\"Production\",\n",
-    "    archive_existing_versions=True\n",
-    ")"
+    "#DEPRECATED\n",
+    "# client.transition_model_version_stage(\n",
+    "#     name=model_name,\n",
+    "#     version=4,\n",
+    "#     stage=\"Production\",\n",
+    "#     archive_existing_versions=True\n",
+    "# )"
    ]
   },
   {
@@ -515,11 +566,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "0848c9d6c7d415ad6c477ff7ff8e98694d1a4aa96d0deee89244642e6b630036"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('exp-tracking-env')",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -533,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4
  },
